# topics-2

./: Cargo.toml  ci.sh
.run/: Fix.run.xml  check.run.xml  ci.sh.run.xml  doc test.run.xml  test.run.xml
frontend-next/: package.json
frontend-next/pages/: _app.tsx
frontend-next/pages/kind/: [kind].tsx
frontend-next/public/: output.json
frontend-next/src/: types.ts
frontend-svelte/__generated__/: ir_ts_types.ts
frontend-svelte/src/routes/: __layout.svelte  data.ts
frontend-svelte/src/routes/kind/: [kind].svelte
frontend-svelte/src/utils/: types.ts
frontend-svelte/static/: output.json
input_md/: Cargo.toml
input_md/fixtures/: global-config.md  run-screenshots.md
input_md/src/: lib.rs
ir/: Cargo.toml
ir/fixtures/: global-config.yaml  output_rep.yaml  run-screenshots.yaml
ir/src/: action.rs  command.rs  config.rs  dependency_list.rs  input_lang.rs  instruction.rs  lib.rs  location.rs  markdown.rs  named_ref.rs  named_ref_list.rs  output_rep.rs  step.rs  ts_types.rs
ir/typescript/: ir_ts_types.ts
output_md/: Cargo.toml
topics/: Cargo.toml
topics_core/: Cargo.toml
topics_core/src/: lib.rs
