[package]
name = "input_md"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
comrak = "0.11.0"
ir = { path = "../ir", version = "0.1.0" }