[package]
name = "ir"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["serde_derive"] }
serde_yaml = "0.8.17"
eyre = "0.6.5"