[package]
name = "topics_core"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input_md = { path = "../input_md", version = "0.1.0" }
output_md = { path = "../output_md", version = "0.1.0" }
ir = { path = "../ir", version = "0.1.0" }